[project]
name = "financial_research_ai_agent"
version = "0.0.1"
description = "AI Agent Financial Research AI Agent&#39; Project."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Luke Hinds", email = "lukehinds@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "agentup>=0.7.4",  # AgentUp framework - provides all core functionality
]

[tool.uv]
extra-index-url = ["https://api.agentup.dev/simple"]